# TypstInterop

./: .gitignore  Directory.Build.props  LICENSE  README.md  SECURITY.md  TypstInterop.slnx  renovate.json
.github/: CODEOWNERS
.github/workflows/: _build.yml  _publish.yml  build-and-pack.yml  promote.yml  release.yml  scorecard.yml  security.yml
TypstInterop/: TypstCompiler.cs  TypstInterop.csproj
TypstInterop.Benchmarks/: Program.cs  TypstBenchmarks.cs  TypstInterop.Benchmarks.csproj
TypstInterop.Runtime/: TypstInterop.Runtime.csproj
TypstInterop.Tests/: TypstInterop.Tests.csproj
TypstInterop.Tests/Core/: CompilationTests.cs
TypstInterop.Tests/Features/: FontTests.cs
TypstInterop.Tests/Integration/: ParallelTests.cs
TypstInterop/Abstractions/: ITypstCompiler.cs  ITypstConfigurator.cs
TypstInterop/Internal/: NativeLibraryLoader.cs  NativeMethods.g.cs  SizeT.cs
TypstInterop/Models/: TypstCompilationResult.cs  TypstCompilerOptions.cs
docker/: ci.Dockerfile
examples/TypstInterop.Example.Net10/: Program.cs  TypstInterop.Example.Net10.csproj
examples/TypstInterop.Example.Net48/: Program.cs  TypstInterop.Example.Net48.csproj
examples/TypstInterop.Example.Net8/: Program.cs  TypstInterop.Example.Net8.csproj
src/TypstInterop/: AssemblyInfo.cs  TypstCompiler.cs  TypstInterop.csproj  packages.lock.json
src/TypstInterop.Benchmarks/: CompetitorBenchmarks.cs  OutputFormatBenchmarks.cs  Program.cs  Scenarios.cs  TypstInterop.Benchmarks.csproj  TypstInteropBenchmarks.cs  packages.lock.json
src/TypstInterop.Runtime/: TypstInterop.Runtime.csproj  packages.lock.json
src/TypstInterop.Tests/: App.config  TypstInterop.Tests.csproj  packages.lock.json
src/TypstInterop.Tests/Core/: CompilationTests.cs
src/TypstInterop.Tests/Features/: AssetTests.cs  DiagnosticsTests.cs  FontListingTests.cs  FontTests.cs  InputTests.cs  MockingTests.cs  OptionsTests.cs  OutputFormatTests.cs  PdfOptionsTests.cs  ReuseTests.cs  RootPathTests.cs
src/typst_interop/: Cargo.toml  deny.toml
src/typst_interop/src/: lib.rs
typst_interop/: Cargo.toml  build.rs
typst_interop/src/: lib.rs
wiki/: _Sidebar.md  benchmarks.md  building-from-source.md  configuration.md  diagnostics.md  examples.md  getting-started.md  home.md  output-formats.md  project-root-and-fonts.md
(+13 files in other folders)
