[package]
name = "typst_interop"
authors = ["Stanisław Nieradko <stanislaw@nieradko.com>"]
version = "1.0.0"
edition = "2024"
repository = "https://github.com/KanarekLife/TypstInterop"
documentation = "https://github.com/KanarekLife/TypstInterop"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
typst = "0.14.2"
typst-pdf = "0.14.2"
typst-assets = "0.14.2"
libc = "0.2"
thiserror = "2.0"
once_cell = "1.19"
bytes = "1.6"
comemo = "0.4"
ecow = "0.2"
chrono = { version = "0.4", features = ["clock"] }
typst-kit = { version = "0.14.2", features = ["packages", "downloads", "fonts", "embed-fonts", "vendor-openssl"] }
typst-syntax = "0.14.2"

[build-dependencies]
csbindgen = "1.9.0"
